--- a/html/develop.html
+++ b/html/develop.html
@@ -21,22 +21,24 @@
       </header>
       <main>
         <div class="section1">
-          <div class="job-list">
-            <div class="section1-grid">
-              <button class="job-group">
-                <p class="job-group-title">개발</p>
-                <span class="more-button" role="button" aria-label="popup navigation button">
-                  <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 7px"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
-                </span>
-              </button>
-              <button class="job-category">
-                <p class="job-group-title">개발 전체</p>
-                <span class="more-button" role="button" aria-label="popup navigation button">
-                  <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 7px"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
-                </span>
-              </button>
-            </div>
-            <div class="section1-grid1">
+          <div class="section1-grid">
+            <button class="job-group">
+              <p class="job-group-title">개발</p>
+              <span class="more-button" role="button" aria-label="popup navigation button">
+                <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 0.43rem"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
+              </span>
+            </button>
+            <button class="job-category">
+              <p class="job-group-title">개발 전체</p>
+              <span class="more-button" role="button" aria-label="popup navigation button">
+                <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 0.43rem"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
+              </span>
+            </button>
+          </div>
+        </div>
+        <div class="section-scroll">
+          <div class="section-scroll-content">
+            <div class="section-scroll-grid">
               <button class="filter-button">
                 <span class="filter-title">지역</span>
                 <span class="button-display">한국</span>
@@ -51,18 +53,26 @@
                 <svg width="8" height="7" viewBox="0 0 8 7" fill="none" xmlns="https://www.w3.org/2000/svg"><path d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z" fill="#333333"></path></svg>
               </button>
             </div>
-            <hr width="1060px" color="#ececec" />
             <div class="slick-list">
               <div>
                 <button>
-                  <span>연봉이 최고의 복지</span>
-                  <img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F634f02e0-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75" />
+                  <span>연봉이 최고의 복지 💰</span>
+                </button>
+              </div>
+              <div>
+                <button>
+                  <span>재택근무 🏠</span>
+                </button>
+              </div>
+              <div>
+                <button>
+                  <span>퇴사율 10% 이하 📍</span>
                 </button>
               </div>
             </div>
           </div>
-          <hr width="100%" color="#ececec" />
         </div>
+
         <div class="section2">
           <div class="bookmark">
             <svg width="11" height="16" viewBox="0 0 13 17" style="color: #36f">
@@ -71,7 +81,129 @@
             </svg>
             <span> 북마크 모아보기 > </span>
           </div>
-          <h3>적극 채용 중인 회사</h3>
+          <h2>적극 채용 중인 회사</h2>
+          <ul class="slider-item">
+            <li>
+              <div class="slider-item-top">
+                <img class="slider-item-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F25912%2Feu3nk4q7gb3xdn2i__400_400.png&w=400&q=75" />
+              </div>
+              <div class="slider-item-middle">
+                <img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fwdes%2F0_5.eee507ab.jpg&amp;w=100&amp;q=75&quot" />
+              </div>
+              <div class="slider-item-bottom">
+                <p class="slidder-company-title">데이터라이즈</p>
+                <p class="slidder-company-position">2개 포지션</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="section3">
+          <ul class="job-card">
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <p class="job-card-category">프론트엔드 개발자</p>
+                <p class="job-card-company-name">디플레닛</p>
+                <div class="job-card-container-hover">
+                  <div class="job-card-container">응답률 매우 높음</div>
+                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                </div>
+                <p class="job-card-location">서울 · 한국</p>
+                <p class="job-card-reward">채용보상금 1,000,000원</p>
+              </a>
+            </li>
+          </ul>
         </div>
       </main>
       <footer>
@@ -80,5 +212,6 @@
         </script>
       </footer>
     </div>
+    <script src="../js/scrollTop.js"></script>
   </body>
 </html>
