--- a/html/header.html
+++ b/html/header.html
@@ -27,7 +27,7 @@
     </div>
     <a href="./main.html"><img class="logo-icon" src="../image/logo.png" /></a>
   </div>
-  <ul class="header-center">
+  <ul>
     <li class="menu">채용</li>
     <li class="menu">이벤트</li>
     <li class="menu">직군별 연봉</li>
@@ -36,8 +36,8 @@
     <li class="menu">프리랜서</li>
     <li class="menu">AI 합격예측</li>
   </ul>
-  <ul class="header-right">
-    <li>
+  <div class="header-right">
+    <div>
       <button>
         <svg xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" width="18" height="18" viewBox="0 0 18 18">
           <defs>
@@ -48,12 +48,8 @@
           </g>
         </svg>
       </button>
-    </li>
-    <li>
       <button class="menu">회원가입/로그인</button>
-    </li>
-    <li>
-      <a href="#" class="corp-service">기업 서비스</a>
-    </li>
-  </ul>
+    </div>
+    <a href="#" class="corp-service">기업 서비스</a>
+  </div>
 </div>
