--- a/html/main.html
+++ b/html/main.html
@@ -43,14 +43,10 @@
                 </defs>
                 <g fill="none" fill-rule="evenodd">
                   <g>
-                    <g>
-                      <g transform="translate(-1080 -374) translate(1080 374)">
-                        <g>
-                          <path stroke="#999" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M9.421 13.334c-.736.277-1.535.43-2.368.43-3.706 0-6.71-3.005-6.71-6.711 0-3.707 3.004-6.71 6.71-6.71 1.853 0 3.53.75 4.745 1.965 1.214 1.214 1.965 2.892 1.965 4.745 0 1.853-.75 3.53-1.965 4.745" transform="translate(1 1)"></path>
-                          <path fill="#999" d="M6.382 10.408c0-.371.3-.671.67-.671.371 0 .672.3.672.67 0 .372-.3.672-.671.672-.37 0-.671-.3-.671-.671" transform="translate(1 1) rotate(-180 7.053 10.408)"></path>
-                          <path stroke="#999" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M5.04 5.655c0-1.08.901-1.958 2.013-1.958 1.11 0 2.013.877 2.013 1.958 0 1.08-1.007 1.957-2.013 1.957v.783" transform="translate(1 1)"></path>
-                        </g>
-                      </g>
+                    <g transform="translate(-1080 -374) translate(1080 374)">
+                      <path stroke="#999" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M9.421 13.334c-.736.277-1.535.43-2.368.43-3.706 0-6.71-3.005-6.71-6.711 0-3.707 3.004-6.71 6.71-6.71 1.853 0 3.53.75 4.745 1.965 1.214 1.214 1.965 2.892 1.965 4.745 0 1.853-.75 3.53-1.965 4.745" transform="translate(1 1)"></path>
+                      <path fill="#999" d="M6.382 10.408c0-.371.3-.671.67-.671.371 0 .672.3.672.67 0 .372-.3.672-.671.672-.37 0-.671-.3-.671-.671" transform="translate(1 1) rotate(-180 7.053 10.408)"></path>
+                      <path stroke="#999" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M5.04 5.655c0-1.08.901-1.958 2.013-1.958 1.11 0 2.013.877 2.013 1.958 0 1.08-1.007 1.957-2.013 1.957v.783" transform="translate(1 1)"></path>
                     </g>
                   </g>
                 </g>
@@ -61,7 +57,7 @@
                 <span id="mini-popup-title">취직/이직 준비하시기도 바쁘시죠? 😎</span>
                 <button onclick="offDisplay('mini-popup')">
                   <span
-                    ><svg viewBox="0 0 24 24" style="width: 18px"><path d="M17.97 19.03a.749.749 0 1 0 1.06-1.06l-6.5-6.5a.749.749 0 0 0-1.06 0l-6.5 6.5a.749.749 0 1 0 1.06 1.06L12 13.06l5.97 5.97zM12 10.94 6.03 4.97a.749.749 0 1 0-1.06 1.06l6.5 6.5a.749.749 0 0 0 1.06 0l6.5-6.5a.749.749 0 1 0-1.06-1.06L12 10.94z"></path></svg
+                    ><svg viewBox="0 0 24 24" style="width: 1.12rem"><path d="M17.97 19.03a.749.749 0 1 0 1.06-1.06l-6.5-6.5a.749.749 0 0 0-1.06 0l-6.5 6.5a.749.749 0 1 0 1.06 1.06L12 13.06l5.97 5.97zM12 10.94 6.03 4.97a.749.749 0 1 0-1.06 1.06l6.5 6.5a.749.749 0 0 0 1.06 0l6.5-6.5a.749.749 0 1 0-1.06-1.06L12 10.94z"></path></svg
                   ></span>
                 </button>
               </div>
@@ -157,31 +153,31 @@
             />
           </button>
         </div>
-        <hr width="1060px" color="#ececec" />
+        <hr />
         <div class="section2">
           <h2>3분만에 읽는 Wanted+ 아티클</h2>
           <a href="#" class="example">아티클 전체보기 ></a>
           <ul class="career-list">
             <li>
               <a href="#">
-                <div><img class="list-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fwanted.video.kr.kollus.com%2Fkr%2Fsnapshot%2Fwanted%2F20210208%2F4%2F11031552.jpg&amp;w=500&amp;q=75" alt="우리회사 제품 라이브커머스로 팔기" /></div>
-                <p class="list-title">우리회사 제품 라이브커머스로 팔기</p>
-                <p class="list-comment2">라이브커머스를 더 잘하는 법이 궁금하다면, 지금 시청해 보세요!</p>
+                <div><img class="list-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fevents%2F2465%2Fbd154172.jpg&w=800&q=75" /></div>
+                <p class="list-title">이력서 제출 전에 반드시 확인해 보세요!</p>
+                <p class="list-comment2">#개발 #취업/이직 #커리어고민</p>
               </a>
             </li>
           </ul>
         </div>
-        <hr width="1060px" color="#ececec" />
-        <div class="section2">
+        <hr />
+        <div class="section2" id="VOD">
           <h2>직장인을 위한 Wanted+ VOD</h2>
           <a href="#" class="example">VOD 전체보기 ></a>
           <ul class="career-list">
             <li>
               <a href="#">
-                <div><img class="list-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fwanted.video.kr.kollus.com%2Fkr%2Fsnapshot%2Fwanted%2F20210208%2F4%2F11031552.jpg&amp;w=500&amp;q=75" alt="우리회사 제품 라이브커머스로 팔기" /></div>
-                <p class="list-comment3">우리회사 제품 라이브커머스로 팔기</p>
-                <p class="list-title">우리회사 제품 라이브커머스로 팔기</p>
-                <p class="list-comment">라이브커머스를 더 잘하는 법이 궁금하다면, 지금 시청해 보세요!</p>
+                <div><img class="list-image" src="https://image.wanted.co.kr/optimize?src=http%3A%2F%2Fwanted.video.kr.kollus.com%2Fkr%2Fsnapshot%2Fwanted%2F20210512%2F2%2F46759799.jpg&w=800&q=75" /></div>
+                <p class="list-comment3">애프터모멘트 박창선</p>
+                <p class="list-title">터지는 콘텐츠는 이렇게 만듭니다 Part 2: 독자의 마음 - 박창선</p>
+                <p class="list-comment">터지는 콘텐츠는 이렇게 만듭니다 : Wanted How To</p>
               </a>
             </li>
           </ul>
@@ -193,7 +189,7 @@
           <ul class="career-list">
             <li class="event-list">
               <a href="#">
-                <div><img class="event-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fwanted.video.kr.kollus.com%2Fkr%2Fsnapshot%2Fwanted%2F20210208%2F4%2F11031552.jpg&amp;w=500&amp;q=75" alt="우리회사 제품 라이브커머스로 팔기" /></div>
+                <div><img class="event-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fevents%2F2431%2Ff6fb0b1c.jpg&w=1200&q=100" /></div>
                 <div id="online-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 11 12">
                     <path
@@ -209,7 +205,7 @@
             </li>
             <li class="event-list">
               <a href="#">
-                <div><img class="event-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fwanted.video.kr.kollus.com%2Fkr%2Fsnapshot%2Fwanted%2F20210208%2F4%2F11031552.jpg&amp;w=500&amp;q=75" alt="우리회사 제품 라이브커머스로 팔기" /></div>
+                <div><img class="event-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fevents%2F2404%2F54ecb586.jpg&w=1200&q=100" /></div>
                 <div id="online-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 11 12">
                     <path
@@ -237,7 +233,7 @@
                 </svg>
                 <span id="subscribe-reason">구독해야 하는 이유</span>
               </div>
-              <p style="font-size: 14px">구독자의 서류 합격률이 비구독자보다 1.5배 높아요!</p>
+              <p>구독자의 서류 합격률이 비구독자보다 1.5배 높아요!</p>
               <a href="#" id="apply-subscribe">
                 <p>
                   <svg class="check-icon" viewBox="0 0 15 15">
