--- a/html/develop.html
+++ b/html/develop.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>개발 채용 정보 | 원티드</title>
+    <script src="https://kit.fontawesome.com/938222b1cc.js" crossorigin="anonymous"></script>
     <script src="../js/loadHTML.js"></script>
-    <link href="../css/font.css" rel="stylesheet" />
     <link href="../css/whole.css" rel="stylesheet" />
+    <link href="../css/font.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
+    <link href="../css/login.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
     <link href="../css/develop.css" rel="stylesheet" />
   </head>
@@ -46,11 +48,11 @@
               <button class="filter-button">
                 <span class="filter-title">경력</span>
                 <span class="button-display">전체</span>
-                <svg width="8" height="7" viewBox="0 0 8 7" fill="none" xmlns="https://www.w3.org/2000/svg"><path d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z" fill="#333333"></path></svg>
+                <i class="fa-solid fa-caret-down"></i>
               </button>
               <button class="filter-button">
                 <span class="filter-title">기술스택</span>
-                <svg width="8" height="7" viewBox="0 0 8 7" fill="none" xmlns="https://www.w3.org/2000/svg"><path d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z" fill="#333333"></path></svg>
+                <i class="fa-solid fa-caret-down"></i>
               </button>
             </div>
             <div class="slick-list">
@@ -75,10 +77,7 @@
 
         <div class="section2">
           <div class="bookmark">
-            <svg width="11" height="16" viewBox="0 0 13 17" style="color: #36f">
-              <defs><path id="bookmarkIconFill" d="M6.25 13.21L.905 16.22c-.403.228-.905-.06-.905-.517V.596C0 .267.27 0 .605 0h11.29c.334 0 .605.267.605.596v15.107c0 .458-.502.745-.905.518L6.25 13.209z"></path></defs>
-              <g fill="none" fill-rule="evenodd" transform="translate(.188)"><use fill="currentColor" xlink:href="#bookmarkIconFill"></use></g>
-            </svg>
+            <i class="fa-sharp fa-solid fa-bookmark"></i>
             <span> 북마크 모아보기 > </span>
           </div>
           <h2>적극 채용 중인 회사</h2>
@@ -101,7 +100,10 @@
           <ul class="job-card">
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
+                </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
@@ -114,7 +116,10 @@
             </li>
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
+                </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
@@ -127,7 +132,10 @@
             </li>
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
+                </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
@@ -140,7 +148,10 @@
             </li>
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
+                </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
@@ -153,7 +164,10 @@
             </li>
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
+                </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
@@ -166,33 +180,10 @@
             </li>
             <li>
               <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
-                <p class="job-card-category">프론트엔드 개발자</p>
-                <p class="job-card-company-name">디플레닛</p>
-                <div class="job-card-container-hover">
-                  <div class="job-card-container">응답률 매우 높음</div>
-                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
+                <div>
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
                 </div>
-                <p class="job-card-location">서울 · 한국</p>
-                <p class="job-card-reward">채용보상금 1,000,000원</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
-                <p class="job-card-category">프론트엔드 개발자</p>
-                <p class="job-card-company-name">디플레닛</p>
-                <div class="job-card-container-hover">
-                  <div class="job-card-container">응답률 매우 높음</div>
-                  <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
-                </div>
-                <p class="job-card-location">서울 · 한국</p>
-                <p class="job-card-reward">채용보상금 1,000,000원</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div><img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" /></div>
                 <p class="job-card-category">프론트엔드 개발자</p>
                 <p class="job-card-company-name">디플레닛</p>
                 <div class="job-card-container-hover">
