--- a/html/header.html
+++ b/html/header.html
@@ -39,17 +39,69 @@
   <div class="header-right">
     <div>
       <button>
-        <svg xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" width="18" height="18" viewBox="0 0 18 18">
-          <defs>
-            <path id="qt2dnsql4a" d="M15.727 17.273a.563.563 0 10.796-.796l-4.875-4.875-.19-.165a.563.563 0 00-.764.028 5.063 5.063 0 111.261-2.068.562.562 0 101.073.338 6.188 6.188 0 10-1.943 2.894l4.642 4.644z"></path>
-          </defs>
-          <g fill="none" fill-rule="evenodd">
-            <use fill="#333" fill-rule="nonzero" stroke="#333" stroke-width=".3" xlink:href="#qt2dnsql4a"></use>
-          </g>
-        </svg>
+        <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button class="menu">회원가입/로그인</button>
+      <button onclick="onDisplay('login-popup-background')" class="menu">회원가입/로그인</button>
     </div>
     <a href="#" class="corp-service">기업 서비스</a>
+  </div>
+  <div id="login-popup-background">
+    <div id="login-popup">
+      <div class="login-logo">
+        <img class="logo-icon" src="../image/logo.png" />
+        <i onclick="offDisplay('login-popup-background')" class="fa fa-times" aria-hidden="true"></i>
+      </div>
+      <div class="login-content">
+        <div class="login-comment">
+          <h1>
+            직장인을 위한 <br />
+            커리어 플랫폼, 원티드!
+          </h1>
+          <h2>
+            커리어 성장과 행복을 위한 여정 <br />
+            지금 원티드에서 시작하세요.
+          </h2>
+        </div>
+        <div class="login-email">
+          <p>이메일</p>
+          <input class="input-email" placeholder="이메일을 입력해 주세요." />
+        </div>
+        <div class="panel-buttons">
+          <input type="submit" onclick="signupCheck()" class="email-login-button">
+            <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
+            <span>이메일로 계속하기</span>
+          </input>
+          <p>or</p>
+          <div class="continue-next-account">다음 계정으로 계속하기</div>
+          <div class="another-social-buttons">
+            <div class="social-button">
+              <div class="kakao-button">
+                <i class="fa-sharp fa-solid fa-comment fa-lg"></i>
+              </div>
+              <p>Kakao</p>
+            </div>
+            <div class="social-button">
+              <div class="facebook-button">
+                <i class="fa-brands fa-facebook-f fa-lg"></i>
+              </div>
+              <p>Facebook</p>
+            </div>
+            <div class="social-button">
+              <div class="google-button">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/1920px-Google_%22G%22_Logo.svg.png" />
+              </div>
+              <p>Google</p>
+            </div>
+            <div>
+              <div class="apple-button">
+                <i class="fa-brands fa-apple fa-lg"></i>
+              </div>
+              <p>Apple</p>
+            </div>
+          </div>
+        </div>
+        <p class="popup-bottom-comment">걱정마세요! 여러분의 지원 활동은 SNS에 노출되지 않습니다.<br />회원가입 시 개인정보 처리방침과 이용약관을 확인하였으며, 동의합니다.</p>
+      </div>
+    </div>
   </div>
 </div>
