--- a/html/main.html
+++ b/html/main.html
@@ -12,6 +12,7 @@
     <link href="../css/font.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
     <link href="../css/login.css" rel="stylesheet" />
+    <link href="../css/signup.css" rel="stylesheet" />
     <link href="../css/main.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
   </head>
@@ -344,6 +345,7 @@
         </script>
       </footer>
     </div>
+    <script src="../js/login.js"></script>
     <script src="../js/slideShow.js"></script>
     <script src="../js/scrollMenu.js"></script>
   </body>
