221018 developDetail 페이지 퍼블리싱

--- a/html/develop.html
+++ b/html/develop.html
@@ -7,10 +7,12 @@
     <title>개발 채용 정보 | 원티드</title>
     <script src="https://kit.fontawesome.com/938222b1cc.js" crossorigin="anonymous"></script>
     <script src="../js/loadHTML.js"></script>
+    <script src="../js/display.js"></script>
     <link href="../css/whole.css" rel="stylesheet" />
     <link href="../css/font.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
     <link href="../css/login.css" rel="stylesheet" />
+    <link href="../css/signup.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
     <link href="../css/develop.css" rel="stylesheet" />
   </head>
@@ -99,13 +101,13 @@
         <div class="section3">
           <ul class="job-card">
             <li>
-              <a href="#">
+              <a href="./developDetail.html">
                 <div>
-                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32188%2F5inih6cmub1ybzl6__400_400.jpeg&w=400&q=75" />
+                  <img class="job-card-image" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fcompany%2F32138%2Fiuyt954kiyblqg49__1080_790.png&w=1000&q=75" />
                   <i class="fa fa-bookmark-o fa-lg job-card-bookmark" aria-hidden="true"></i>
                 </div>
                 <p class="job-card-category">프론트엔드 개발자</p>
-                <p class="job-card-company-name">디플레닛</p>
+                <p class="job-card-company-name">카카오픽코마</p>
                 <div class="job-card-container-hover">
                   <div class="job-card-container">응답률 매우 높음</div>
                   <span class="job-card-container-massage">지원 후 응답받을 확률이 95% 이상입니다.</span>
@@ -203,6 +205,7 @@
         </script>
       </footer>
     </div>
+    <script src="../js/login.js"></script>
     <script src="../js/scrollTop.js"></script>
   </body>
 </html>
