--- a/html/header.html
+++ b/html/header.html
@@ -69,9 +69,9 @@
           <small id="emailCheck"></small>
         </div>
         <div class="panel-buttons">
-          <!-- <input type="submit" onclick="loginCheck()" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
-          <input type="submit" onclick="gotosignup();" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/>
-          <!-- <input type="submit" onclick="loginCheck(); gotosignup('signup-popup-background');" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
+          <input type="submit" onclick="loginCheck()" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/>
+          <!-- <input type="submit" onclick="gotosignup();" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
+          <!-- <input type="submit" onclick="loginCheck(); gotosignup();" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
           <p>or</p>
           <div class="continue-next-account">다음 계정으로 계속하기</div>
           <div class="another-social-buttons">
