221019 피드백 받은 사항 개선(이미지 슬라이드, 스크롤 이벤트, 전체 동의)

--- a/html/main.html
+++ b/html/main.html
@@ -348,5 +348,6 @@
     <script src="../js/login.js"></script>
     <script src="../js/slideShow.js"></script>
     <script src="../js/scrollMenu.js"></script>
+    <script src="../js/checkBox.js"></script>
   </body>
 </html>
