--- a/html/header.html
+++ b/html/header.html
@@ -69,9 +69,7 @@
           <small id="emailCheck"></small>
         </div>
         <div class="panel-buttons">
-          <input type="submit" onclick="loginCheck()" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/>
-          <!-- <input type="submit" onclick="gotosignup();" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
-          <!-- <input type="submit" onclick="loginCheck(); gotosignup();" class="email-login-button" value="&#xf0e0; 이메일로 계속하기"/> -->
+          <input type="submit" onclick="loginCheck()" class="email-login-button" value="&#xf0e0; 이메일로 계속하기" />
           <p>or</p>
           <div class="continue-next-account">다음 계정으로 계속하기</div>
           <div class="another-social-buttons">
@@ -312,13 +310,28 @@
           <input class="input-box" type="password" id="checkPassword" placeholder="비밀번호를 다시 한번 입력해 주세요." />
           <small id="passwordDoubleCheck"></small>
         </div>
-        <!-- <div class="checkbox">
-          <input type="checkbox" name="selectall" value="selectall" onclick="selectAll(this)"/>
-          <label for="check_all">전체 동의</label>
-        </div> -->
-        <div class="panel-buttons">
-          <input type="submit" onclick="signupCheck()" class="signup-button" value="회원가입하기" />
+        <div class="agree-checkbox">
+          <div>
+            <input type="checkbox" name="selectall" value="" onclick="selectAll(this)" />
+            <span>전체 동의</span>
+          </div>
+          <hr />
+          <div class="agree-checkbox-one">
+            <input type="checkbox" name="agreement" value="1" onclick="checkSelectAll()" />
+            <span>만 14세 이상입니다.(필수)</span>
+          </div>
+          <div class="agree-checkbox-one">
+            <input type="checkbox" name="agreement" value="2" onclick="checkSelectAll()" />
+            <span>oneID 이용약관 동의 (필수)</span>
+          </div>
+          <div class="agree-checkbox-one">
+            <input type="checkbox" name="agreement" value="3" onclick="checkSelectAll()" />
+            <span>개인정보 및 수집 이용 동의 (필수)</span>
+          </div>
         </div>
+      </div>
+      <div class="panel-buttons">
+        <input type="submit" onclick="signupCheck()" class="signup-button" value="회원가입하기" />
       </div>
     </div>
   </div>
